--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <main id="content">
   <form method="get" action="#null">
     <h1> Sweepstakes Entry </h1>
-    <p> Fill out this form to be entered for a Sweepstakes? </p>
+    <p> Fill out this form to be entered for a Sweepstakes! </p>
     <ol>
       <li>
         <label for="email">Email</label>
@@ -25,10 +25,10 @@
         <input type="date" name="DOB" />
       </li>
       <li>
-        <input type="submit" name="submit" id="submit" value="Subscribe" />
+        <input type="submit" name="submit" id="submit" value="Subscribe Here" />
       </li>
     </ol>
   </form>
-</main>  
+</main>
 </body>
 </html>
