changed some words around on the page for a cleaner look

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <p> Fill out this form to be entered for a Sweepstakes! </p>
     <ol>
       <li>
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" placeholder="joeblow@gmail.com" />
+        <label for="email"> Email: </label>
+        <input type="email" name="email" id="email" placeholder="what@ever.com" />
       </li>
       <li>
-        <label> Phone Number </label>
-        <input type="phone" name="number" placeholder="111-1111-1111" />
+        <label> Number: </label>
+        <input type="phone" name="number" placeholder="111-222-3333" />
       </li>
       <li>
-        <label> Date of Birth: </label>
+        <label> DOB: </label>
         <input type="date" name="DOB" />
       </li>
       <li>
-        <input type="submit" name="submit" id="submit" value="Subscribe Here" />
+        <input type="submit" name="submit" id="submit" value="Enter Here" />
       </li>
     </ol>
   </form>
